--- a/templates/aplicacaoDois.html
+++ b/templates/aplicacaoDois.html
@@ -53,6 +53,13 @@
 
                                 <div class="col-md-6 mb-6">
                                     <div class="form-floating mb-3 mt-3">
+                                        <input type="date" class="form-control" name="dataPlantio" required>
+                                        <label for="dataPlantio" class="form-label">Data do Plantio</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6 mb-6">
+                                    <div class="form-floating mb-3 mt-3">
                                         <select class="form-select" id="fungicidaUtilizado" name="fungicidaUtilizado" required>
                                             <option value="0">Nenhum</option>
                                             <option value="1">TriazolEstrub</option>
@@ -68,7 +75,6 @@
                                     <div class="form-floating mb-3 mt-3">
                                         <input type="date" class="form-control" id="dataPrimeira" name="dataPrimeira" required>
                                         <label for="dataPrimeira" class="form-label">Data da primeira aplicação:</label>
-                                        <div class="invalid-feedback">Selecione uma data válida.</div>
                                     </div>
                                 </div>
 
@@ -76,7 +82,6 @@
                                     <div class="form-floating mb-3 mt-3">
                                         <input type="date" class="form-control" id="dataSegunda" name="dataSegunda" required>
                                         <label for="dataSegunda" class="form-label">Data da segunda aplicação:</label>
-                                        <div class="invalid-feedback">Selecione uma data válida.</div>
                                     </div>
                                 </div>
 
