--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
 <div class="container h-100 d-flex justify-content-center align-items-center">
     <div class="menu-container text-center col-md-6">
         <h1>Bem-vindo</h1>
-        <p class="mb-4">Qual aplicação você deseja calcular?</p>
+        <p class="mb-4">Qual aplicação de fungicidas você deseja calcular?</p>
 
         <a href="/form1" class="btn btn-primary w-100 btn-menu">1ª Aplicação</a>
         <a href="/form2" class="btn btn-success w-100 btn-menu">2ª Aplicação</a>
