--- a/templates/aplicacaoTres.html
+++ b/templates/aplicacaoTres.html
@@ -61,9 +61,27 @@
                                 <div class="col-md-4 mb-6">
                                     <div class="form-floating mb-3 mt-3">
                                         <select class="form-select" id="fungicidaUtilizado" name="fungicidaUtilizado" required>
-                                            <option value="0">Nenhum</option>
-                                            <option value="1">TriazolEstrub</option>
-                                            <option value="2">CarbEstrob</option>
+                                            <option value="0">Nenhum</option> <!-- 1 - TriazolEstrub 2 - CarbEstrob-->
+                                            <option value="1">Propiconazol</option>
+                                            <option value="1">Ciproconazol</option>
+                                            <option value="1">Flutriafol</option>
+                                            <option value="1">Tetraconazol</option>
+                                            <option value="1">Tebuconazol</option>
+                                            <option value="1">Epoxiconazol</option>
+                                            <option value="1">Miclobutanil</option>
+                                            <option value="1">Piraclostrobina + Epoxiconazol</option>
+                                            <option value="1">Azoxistrobina + Ciproconazol</option>
+                                            <option value="1">Trifloxistrobina + Ciproconazol</option>
+                                            <option value="1">Azoxistrobina</option>
+                                            <option value="1">Piraclostrobina</option>
+                                            <option value="1">Cresoxim-metílico</option>
+                                            <option value="1">Trifloxistrobina</option>
+                                            <option value="1">Picoxistrobina-metílico</option>
+                                            <option value="2">Fluxopiroxade</option>
+                                            <option value="2">Benzovindiflupir</option>
+                                            <option value="2">Solatenol</option>
+                                            <option value="2">Azoxistrobina + Benzovindiflupir</option>
+                                            <option value="2">Fluxapiroxade + Piraclostrobina</option>
                                         </select>
                                         <label for="fungicidaUtilizado" class="form-label">Qual o fungicida utilizado na segunda aplicação:</label>
                                         <div class="valid-feedback"></div>
