--- a/templates/aplicacaoUm.html
+++ b/templates/aplicacaoUm.html
@@ -42,10 +42,11 @@
                                 <div class="col-md-3 mb-3">
                                     <div class="form-floating mb-3 mt-3">
                                         <select class="form-select" id="previsaoTempo" name="previsaoTempo" required>
-                                            <option value="0">Desfavoravel</option>
-                                            <option value="1">Favoravel</option>
+                                            <option value="0">Temperatura média menor que 20º</option>
+                                            <option value="1">Temperatura média entre 20 e 25º</option>
+                                            <option value="0">Temperatura média maior que 25º</option>
                                         </select>
-                                        <label for="previsaoTempo" class="form-label">Previsão do Tempo:</label>
+                                        <label for="previsaoTempo" class="form-label">Previsão do Tempo para os próximos 5 dias:</label>
                                         <div class="valid-feedback"></div>
                                         <div class="invalid-feedback"></div>
                                     </div>
@@ -127,8 +128,8 @@
                                 <div class="col-md-3 mb-3">
                                     <div class="form-floating mb-3 mt-3">
                                         <select class="form-select" id="estadioFenologico" name="estadioFenologico" required>
-                                            <option value="0">Antes Flores</option>
-                                            <option value="1">A Partir Flores</option>
+                                            <option value="0">Antes do Florescimento</option>
+                                            <option value="1">Depois do Florescimento</option>
                                         </select>
                                         <label for="estadioFenologico" class="form-label">Estadio Fenologico:</label>
                                         <div class="valid-feedback"></div>
