--- a/templates/aplicacaoUm.html
+++ b/templates/aplicacaoUm.html
@@ -46,7 +46,7 @@
                                             <option value="1">Temperatura média entre 20 e 25º</option>
                                             <option value="0">Temperatura média maior que 25º</option>
                                         </select>
-                                        <label for="previsaoTempo" class="form-label">Previsão do Tempo para os próximos 5 dias:</label>
+                                        <label for="previsaoTempo" class="form-label">Prev. do Tempo para os próximos 5 dias:</label>
                                         <div class="valid-feedback"></div>
                                         <div class="invalid-feedback"></div>
                                     </div>
