--- a/templates/aplicacaoUm.html
+++ b/templates/aplicacaoUm.html
@@ -39,20 +39,20 @@
                             <form action="/resultado" class="was-validated" method="POST" enctype="multipart/form-data">
 
                                 <div class="row">
-                                <div class="col-md-3 mb-3">
+                                <div class="col-md-4 mb-3">
                                     <div class="form-floating mb-3 mt-3">
                                         <select class="form-select" id="previsaoTempo" name="previsaoTempo" required>
                                             <option value="0">Temperatura média menor que 20º</option>
                                             <option value="1">Temperatura média entre 20 e 25º</option>
                                             <option value="0">Temperatura média maior que 25º</option>
                                         </select>
-                                        <label for="previsaoTempo" class="form-label">Prev. do Tempo para os próximos 5 dias:</label>
+                                        <label for="previsaoTempo" class="form-label">Previsão do Tempo para os próximos 5 dias:</label>
                                         <div class="valid-feedback"></div>
                                         <div class="invalid-feedback"></div>
                                     </div>
                                 </div>
 
-                                <div class="col-md-3 mb-3">
+                                <div class="col-md-4 mb-3">
                                     <div class="form-floating mb-3 mt-3">
                                         <select class="form-select" id="vazioSanitario" name="vazioSanitario" required>
                                             <option value="0">Não</option>
@@ -64,7 +64,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-3 mb-3">
+                                <div class="col-md-4 mb-3">
                                     <div class="form-floating mb-3 mt-3">
                                         <select class="form-select" id="ocorrenciaParaguai" name="ocorrenciaParaguai" required>
                                             <option value="0">Não</option>
@@ -175,7 +175,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-3 mb-3">
+                                <div class="col-md-4 mb-3">
                                     <div class="form-floating mb-3 mt-3">
                                         <select class="form-select" id="monitoramentoVisual" name="monitoramentoVisual" required>
                                             <option value="0">Negativo</option>
@@ -187,7 +187,7 @@
                                     </div>
                                 </div>
                                 
-                                <div class="col-md-6 mb-3">
+                                <div class="col-md-4 mb-3">
                                     <div class="form-floating mb-3 mt-3">
                                         <select class="form-select" id="ocorrencia" name="ocorrencia" required>
                                             <option value="0">Não</option>
@@ -199,7 +199,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 mb-3">
+                                <div class="col-md-4 mb-3">
                                     <div class="form-floating mb-3 mt-3">
                                         <select class="form-select" id="coletaEsporos" name="coletaEsporos" required>
                                             <option value="0">Ausente</option>
