--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,7 @@
         <a href="/form1" class="btn btn-primary w-100 btn-menu">1ª Aplicação</a>
         <a href="/form2" class="btn btn-success w-100 btn-menu">2ª Aplicação</a>
         <a href="/form3" class="btn btn-warning w-100 btn-menu">3ª Aplicação</a>
+        <a href="/especialista" class="btn btn-info w-100 btn-menu">Área do Especialista</a>
     </div>
 </div>
 
