--- a/templates/formEspecialista.html
+++ b/templates/formEspecialista.html
@@ -89,6 +89,11 @@
                     </ul>
 
                     <div class="mt-4">
+                        <label class="form-label">Digite seu nome:</label>
+                        <textarea name="nome" placeholder="Nome..." required></textarea>
+                    </div>
+
+                    <div class="mt-4">
                         <label class="form-label">Decisão do Especialista Quanto à Aplicação:</label>
                         <select name="decisao" required>
                             <option value="">Selecione...</option>
